--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,51 @@ body {
   background-color: #010101;
 }
 
+/* Vision Mission */
+.visionMission-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 3rem;
+}
+
+.visionMission-card {
+  background-color: #f4f4fc;
+  border-radius: 12px;
+  padding: 3rem;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.visionMission-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+}
+
+.visionMission-title {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #010101;
+  margin-bottom: 0.75rem;
+}
+
+.visionMission-description {
+  font-size: 1.3rem;
+  color: #010101;
+  font-weight: 300;
+  line-height: 1.6;
+  margin: 1.5rem;
+  flex-grow: 1;
+}
+
+.vision p,
+.mission ul {
+  max-width: 500px;
+}
 /* Service */
 .service-grid {
   display: grid;
@@ -314,19 +359,23 @@ body {
 
 /* Advantages */
 .advantages,
-.service {
+.service,
+.vision-mission,
+.footer-bonus {
   padding: 8rem 3% 0;
 }
 
 .advantages h2,
-.service h2 {
+.service h2,
+.vision-mission h2 {
   text-align: center;
   font-size: 2.3rem;
 }
 
 .advantages h2 span,
 .contact-section h2 span,
-.service h2 span {
+.service h2 span,
+.vision-mission span {
   color: var(--primary);
 }
 
@@ -379,6 +428,54 @@ body {
   height: 60px;
 }
 
+/* Footer Image */
+.footer-container {
+  background-image: url(../asset/footer-img.png);
+  background-size: cover;
+  min-height: 60vh;
+  max-width: 100rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 2rem;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  color: white;
+  /* justify-content: center; */
+  /* text-align: center; */
+}
+
+.footer-container .footer-content {
+  padding: 6rem;
+  max-width: 40rem;
+}
+
+.cta-footer {
+  font-size: 1.2rem;
+  padding: 0.8rem 1.9rem;
+  font-weight: 600;
+  color: #ffffff;
+  border-radius: 3rem;
+  outline: 2px solid #ffffff;
+  transition: all 0.3s ease;
+  display: inline-block;
+}
+
+.footer-content h2 {
+  font-size: 3.5rem;
+  color: #ffffff;
+  /* letter-spacing: 1px; */
+  margin-bottom: 3rem;
+}
+
+.cta-footer:hover {
+  background-color: #214ce0;
+  color: #fff;
+  outline: none;
+  transform: translateY(-10px);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+
 /* Contact Form */
 .contact-section h2 {
   text-align: center;
@@ -398,7 +495,7 @@ body {
 .contact-section input,
 .contact-section textarea {
   width: 100%;
-  padding: 0.8rem;
+  padding: 1.5rem;
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -707,6 +804,19 @@ hr {
 
   .stat-item h3 {
     font-size: 2.7rem;
+  }
+
+  /* Footer Image */
+  .footer-bonus {
+    /* max-width: 53rem; */
+    margin: 0 2rem;
+  }
+  .footer-content h2 {
+    font-size: 3.5rem;
+  }
+
+  .cta-footer {
+    font-size: 1.5rem;
   }
 
   /* Contact Form */
